testsuite/tests/properties/invalid_dynvar/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}

class FooNode implements Node[FooNode] {
}

dynvar my_var: Int

@abstract class BaseNode: FooNode {
    @with_dynvars(my_var) fun internal_get_int(): Int = my_var
    @abstract fun get_int_impl(): Int
    @exported fun get_int(): Int = {
        bind my_var = 24;
        node.get_int_impl() + node.internal_get_int()
    }
}
